--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,21 @@
 
 .header {
   background-color: #2ecc71;
-  grid-column: 1 / -1;
+  grid-column: span 4;
 }
 
 .content {
   background-color: #3498db;
-  grid-column: 1 / -2;
-  grid-row: 2 / -2;
+  grid-column: span 3;
+  grid-row: span 2;
 }
 
 .nav {
   background-color: #8e44ad;
-  grid-row: 2 / -2;
+  grid-row: span 2;
 }
 
 .footer {
   background-color: #f39c12;
-  grid-column: 1 / -1;
+  grid-column: span 4;
 }
