--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@
   height: 50vh;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  justify-items: start;
-  align-items: end;
+  place-items: end start;
 }
 
 .header {
