--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,31 @@
 .grid {
-  background-color: #555;
   display: grid;
   gap: 10px;
   height: 100vh;
   grid-template-columns: repeat(4, 100px);
-  grid-template-rows: repeat(4, 100px);
-  place-content: end center;
+  grid-template-rows: repeat(1, 100px);
 }
 
 .header {
   background-color: #2ecc71;
+  justify-self: start;
+  align-self: end;
 }
 
 .content {
   background-color: #3498db;
+  justify-self: end;
+  align-self: start;
 }
 
 .nav {
   background-color: #8e44ad;
+  justify-self: center;
+  align-self: end;
 }
 
 .footer {
   background-color: #f39c12;
+  justify-self: center;
+  align-self: center;
 }
