--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(4, 100px);
-  grid-template-rows: repeat(1, 100px);
-  grid-auto-rows: 100px;
+  grid-template-rows: repeat(4, 100px);
+  grid-auto-flow: column;
+  grid-auto-columns: 100px;
 }
 
 .item:nth-child(odd) {
