--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 .grid {
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(4, 100px);
+  grid-template-columns: repeat(8, minmax(100px, 1fr));
   grid-template-rows: repeat(4, 100px);
-  grid-auto-flow: column;
-  grid-auto-columns: 100px;
 }
 
 .item:nth-child(odd) {
