--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
 .grid {
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(8, minmax(100px, 1fr));
-  grid-template-rows: repeat(4, 100px);
+  grid-auto-rows: 100px;
+  margin-bottom: 20px;
+}
+
+.grid:first-child {
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+
+.grid:last-child {
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 
 .item:nth-child(odd) {
