--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,9 @@
 .grid {
   display: grid;
   gap: 10px;
+  grid-template-columns: max-content min-content;
+  grid-template-rows: max-content min-content;
   grid-auto-rows: 100px;
-  margin-bottom: 20px;
-}
-
-.grid:first-child {
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-}
-
-.grid:last-child {
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 
 .item:nth-child(odd) {
